// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`straight mb first short plunge doesnt trigger skillsot 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {
      Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      Switch {
        "_state": false,
        "column": 5,
        "lastChange": 104642,
        "lastClosed": 104317,
        "lastOpened": 104642,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
    },
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine46",
    "children": Array [
      Object {
        "_name": "DropBank47",
        "children": Array [],
        "name": "DropBank47",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank48",
        "children": Array [],
        "name": "DropBank48",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank49",
        "children": Array [],
        "name": "DropBank49",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank50",
        "children": Array [],
        "name": "DropBank50",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank51",
        "children": Array [],
        "name": "DropBank51",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank52",
        "children": Array [],
        "name": "DropBank52",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game55",
        "children": Array [
          Object {
            "_name": "Player56",
            "children": Array [
              Object {
                "_name": "ClearHoles57",
                "children": Array [],
                "name": "ClearHoles57",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball61",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete62",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter63",
                        "children": Array [],
                        "name": "DropBankResetter63",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter64",
                        "children": Array [],
                        "name": "DropBankResetter64",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter65",
                        "children": Array [],
                        "name": "DropBankResetter65",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter66",
                        "children": Array [],
                        "name": "DropBankResetter66",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter67",
                        "children": Array [],
                        "name": "DropBankResetter67",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter68",
                        "children": Array [],
                        "name": "DropBankResetter68",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete62",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                  Object {
                    "_name": "Skillshot75",
                    "children": Array [],
                    "name": "Skillshot75",
                    "ownOuts": Object {
                      "iSS1": Object {
                        "fill": [Function],
                      },
                      "iSS2": Object {
                        "fill": [Function],
                      },
                      "iSS3": Object {
                        "fill": [Function],
                      },
                      "iSS4": Object {
                        "fill": [Function],
                      },
                      "iSS5": Object {
                        "fill": [Function],
                      },
                      "iSS6": Object {
                        "fill": [Function],
                      },
                      "iSS7": Object {
                        "fill": [Function],
                      },
                      "iSS8": Object {
                        "fill": [Function],
                      },
                      "rightGate": false,
                      "shooterDiverter": false,
                      "upperMagnet": undefined,
                    },
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": false,
                    },
                  },
                ],
                "name": "Ball61",
                "ownOuts": Object {
                  "lMiniReady": Array [
                    "Red",
                  ],
                },
                "state": Object {
                  "miniReady": false,
                },
              },
              Object {
                "_name": "Spinner58",
                "children": Array [],
                "name": "Spinner58",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit59",
                "children": Array [],
                "name": "LeftOrbit59",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb74",
                "children": Array [],
                "name": "StraightMb74",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": "greenArrow",
                  "iLeft2": "greenArrow",
                  "iLeft3": "greenArrow",
                  "iLeft4": "greenArrow",
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": "yellowArrow",
                  "iRight2": "yellowArrow",
                  "iRight3": "yellowArrow",
                  "iRight4": "yellowArrow",
                  "iRight5": "yellowArrow",
                  "iUpper21": "orangeArrow",
                  "iUpper22": "orangeArrow",
                  "iUpper31": "blueArrow",
                  "iUpper32": "blueArrow",
                  "iUpper33": "blueArrow",
                  "ignoreSkillsot": Set {
                    Switch {
                      "_state": false,
                      "column": 0,
                      "lastChange": 53612,
                      "lastClosed": 48957,
                      "lastOpened": 53612,
                      "minOffTime": 10,
                      "minOnTime": 1,
                      "name": "ramp made",
                      "row": 7,
                    },
                    Switch {
                      "_state": false,
                      "column": 5,
                      "lastChange": 104642,
                      "lastClosed": 104317,
                      "lastOpened": 104642,
                      "minOffTime": 10,
                      "minOnTime": 1,
                      "name": "right inlane",
                      "row": 0,
                    },
                  },
                  "lMiniReady": Array [],
                  "lRampArrow": Array [],
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": false,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": false,
                  "state": Object {
                    "_": "starting",
                    "secondBallLocked": false,
                    "starting": true,
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides60",
                "children": Array [],
                "name": "PlayerOverrides60",
                "ownOuts": Object {
                  "leftGate": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player56",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMagnaSaveStatus": Array [
                "Green",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "focus": "StraightMb74",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "rampUp": true,
              "score": 64010,
            },
          },
        ],
        "name": "Game55",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
        },
      },
      Object {
        "_name": "MachineOverrides53",
        "children": Array [
          Object {
            "_name": "EosPulse54",
            "children": Array [],
            "name": "EosPulse54",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides53",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine46",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSS7": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnaSaveStatus": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 5,
        "lastChange": 104642,
        "lastClosed": 104317,
        "lastOpened": 104642,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb lock holds ball 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "greenArrow",
    "iLeft2": "greenArrow",
    "iLeft3": "greenArrow",
    "iLeft4": "greenArrow",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "yellowArrow",
    "iRight2": "yellowArrow",
    "iRight3": "yellowArrow",
    "iRight4": "yellowArrow",
    "iRight5": "yellowArrow",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "orangeArrow",
    "iUpper22": "orangeArrow",
    "iUpper31": "blueArrow",
    "iUpper32": "blueArrow",
    "iUpper33": "blueArrow",
    "ignoreSkillsot": Set {
      Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      Switch {
        "_state": false,
        "column": 5,
        "lastChange": 0,
        "lastClosed": undefined,
        "lastOpened": undefined,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
    },
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine124",
    "children": Array [
      Object {
        "_name": "DropBank125",
        "children": Array [],
        "name": "DropBank125",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank126",
        "children": Array [],
        "name": "DropBank126",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank127",
        "children": Array [],
        "name": "DropBank127",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank128",
        "children": Array [],
        "name": "DropBank128",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank129",
        "children": Array [],
        "name": "DropBank129",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank130",
        "children": Array [],
        "name": "DropBank130",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game133",
        "children": Array [
          Object {
            "_name": "Player134",
            "children": Array [
              Object {
                "_name": "ClearHoles135",
                "children": Array [],
                "name": "ClearHoles135",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball139",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete140",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter141",
                        "children": Array [],
                        "name": "DropBankResetter141",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter142",
                        "children": Array [],
                        "name": "DropBankResetter142",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter143",
                        "children": Array [],
                        "name": "DropBankResetter143",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter144",
                        "children": Array [],
                        "name": "DropBankResetter144",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter145",
                        "children": Array [],
                        "name": "DropBankResetter145",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter146",
                        "children": Array [],
                        "name": "DropBankResetter146",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete140",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                  Object {
                    "_name": "Skillshot153",
                    "children": Array [],
                    "name": "Skillshot153",
                    "ownOuts": Object {
                      "iSS1": Object {
                        "fill": [Function],
                      },
                      "iSS2": Object {
                        "fill": [Function],
                      },
                      "iSS3": Object {
                        "fill": [Function],
                      },
                      "iSS4": Object {
                        "fill": [Function],
                      },
                      "iSS5": Object {
                        "fill": [Function],
                      },
                      "iSS6": Object {
                        "fill": [Function],
                      },
                      "iSS7": Object {
                        "fill": [Function],
                      },
                      "iSS8": Object {
                        "fill": [Function],
                      },
                      "rightGate": false,
                      "shooterDiverter": true,
                      "upperMagnet": undefined,
                    },
                    "state": Object {
                      "curAward": 0,
                      "shooterOpen": true,
                    },
                  },
                ],
                "name": "Ball139",
                "ownOuts": Object {
                  "lMiniReady": Array [
                    "Red",
                  ],
                },
                "state": Object {
                  "miniReady": false,
                },
              },
              Object {
                "_name": "Spinner136",
                "children": Array [],
                "name": "Spinner136",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit137",
                "children": Array [],
                "name": "LeftOrbit137",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb152",
                "children": Array [],
                "name": "StraightMb152",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": "greenArrow",
                  "iLeft2": "greenArrow",
                  "iLeft3": "greenArrow",
                  "iLeft4": "greenArrow",
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": "yellowArrow",
                  "iRight2": "yellowArrow",
                  "iRight3": "yellowArrow",
                  "iRight4": "yellowArrow",
                  "iRight5": "yellowArrow",
                  "iUpper21": "orangeArrow",
                  "iUpper22": "orangeArrow",
                  "iUpper31": "blueArrow",
                  "iUpper32": "blueArrow",
                  "iUpper33": "blueArrow",
                  "ignoreSkillsot": Set {
                    Switch {
                      "_state": false,
                      "column": 0,
                      "lastChange": 53612,
                      "lastClosed": 48957,
                      "lastOpened": 53612,
                      "minOffTime": 10,
                      "minOnTime": 1,
                      "name": "ramp made",
                      "row": 7,
                    },
                    Switch {
                      "_state": false,
                      "column": 5,
                      "lastChange": 0,
                      "lastClosed": undefined,
                      "lastOpened": undefined,
                      "minOffTime": 10,
                      "minOnTime": 1,
                      "name": "right inlane",
                      "row": 0,
                    },
                  },
                  "lMiniReady": Array [],
                  "lRampArrow": Array [],
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": false,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": false,
                  "state": Object {
                    "_": "starting",
                    "secondBallLocked": false,
                    "starting": true,
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides138",
                "children": Array [],
                "name": "PlayerOverrides138",
                "ownOuts": Object {
                  "leftGate": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player134",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMagnaSaveStatus": Array [
                "Green",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "focus": "StraightMb152",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "rampUp": true,
              "score": 63000,
            },
          },
        ],
        "name": "Game133",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
        },
      },
      Object {
        "_name": "MachineOverrides131",
        "children": Array [
          Object {
            "_name": "EosPulse132",
            "children": Array [],
            "name": "EosPulse132",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides131",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine124",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSS7": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnaSaveStatus": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": true,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 0,
        "lastChange": 53612,
        "lastClosed": 48957,
        "lastOpened": 53612,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "ramp made",
        "row": 7,
      },
      "lockDown": true,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb ramp lowers 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "",
    "iCenter2": "",
    "iCenter3": "",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [
      "White",
    ],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Green",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [
      "Red",
    ],
    "lPopperStatus": Array [
      "Green",
    ],
    "lPower1": Array [
      "Orange",
    ],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [
      "White",
    ],
    "lRampStartMb": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [
      "White",
    ],
    "lShooterStartHand": Array [
      Array [
        "Green",
        "fl",
      ],
    ],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": false,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": true,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine10",
    "children": Array [
      Object {
        "_name": "DropBank11",
        "children": Array [],
        "name": "DropBank11",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank12",
        "children": Array [],
        "name": "DropBank12",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank13",
        "children": Array [],
        "name": "DropBank13",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank14",
        "children": Array [],
        "name": "DropBank14",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank15",
        "children": Array [],
        "name": "DropBank15",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank16",
        "children": Array [],
        "name": "DropBank16",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game19",
        "children": Array [
          Object {
            "_name": "Player20",
            "children": Array [
              Object {
                "_name": "ClearHoles21",
                "children": Array [],
                "name": "ClearHoles21",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball25",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete26",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter27",
                        "children": Array [],
                        "name": "DropBankResetter27",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter28",
                        "children": Array [],
                        "name": "DropBankResetter28",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter29",
                        "children": Array [],
                        "name": "DropBankResetter29",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter30",
                        "children": Array [],
                        "name": "DropBankResetter30",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter31",
                        "children": Array [],
                        "name": "DropBankResetter31",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter32",
                        "children": Array [],
                        "name": "DropBankResetter32",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete26",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball25",
                "ownOuts": Object {
                  "lMiniReady": Array [
                    "Red",
                  ],
                },
                "state": Object {
                  "miniReady": false,
                },
              },
              Object {
                "_name": "Spinner22",
                "children": Array [],
                "name": "Spinner22",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit23",
                "children": Array [],
                "name": "LeftOrbit23",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "Poker33",
                "children": Array [],
                "name": "Poker33",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": undefined,
                  "iCenter2": undefined,
                  "iCenter3": undefined,
                  "iLeft1": undefined,
                  "iLeft2": undefined,
                  "iLeft3": undefined,
                  "iLeft4": undefined,
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": undefined,
                  "iRight2": undefined,
                  "iRight3": undefined,
                  "iRight4": undefined,
                  "iRight5": undefined,
                  "iUpper21": undefined,
                  "iUpper22": undefined,
                  "iUpper31": undefined,
                  "iUpper32": undefined,
                  "iUpper33": undefined,
                  "lEjectShowCards": Array [
                    "White",
                  ],
                  "lRampShowCards": Array [
                    "White",
                  ],
                  "lShooterShowCards": Array [
                    "White",
                  ],
                  "lockPost": false,
                  "rampUp": false,
                  "shooterDiverter": true,
                  "upperEject": false,
                },
                "state": Object {
                  "bet": 100,
                  "closeShooter": false,
                  "dealerCardsUsed": Array [],
                  "dealerHand": Array [
                    Object {
                      "flipped": true,
                      "num": 3,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 4,
                      "suit": "c",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "h",
                    },
                    Object {
                      "flipped": false,
                      "num": 5,
                      "suit": "s",
                    },
                    Object {
                      "flipped": false,
                      "num": 9,
                      "suit": "d",
                    },
                    Object {
                      "flipped": false,
                      "num": 4,
                      "suit": "h",
                    },
                    Object {
                      "flipped": true,
                      "num": 2,
                      "suit": "c",
                    },
                  ],
                  "dealerHandDesc": "Pair",
                  "newMbs": Array [
                    Array [
                      "StraightMb",
                      Array [
                        Object {
                          "num": 7,
                          "suit": "s",
                        },
                        Object {
                          "num": 8,
                          "suit": "c",
                        },
                        Object {
                          "num": 9,
                          "suit": "c",
                        },
                        Object {
                          "num": 10,
                          "suit": "s",
                        },
                        Object {
                          "num": 11,
                          "suit": "s",
                        },
                      ],
                    ],
                  ],
                  "newModes": Array [],
                  "playerCardsUsed": Array [],
                  "playerHand": Array [
                    Object {
                      "num": 7,
                      "suit": "s",
                    },
                    Object {
                      "num": 11,
                      "suit": "s",
                    },
                    Object {
                      "num": 8,
                      "suit": "c",
                    },
                    Object {
                      "num": 9,
                      "suit": "c",
                    },
                    Object {
                      "num": 10,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "c",
                    },
                  ],
                  "playerHandDesc": "Straight",
                  "playerWins": undefined,
                  "pot": 1400,
                  "slots": Array [
                    Object {
                      "num": 1,
                      "suit": "d",
                    },
                    null,
                    null,
                    null,
                    Object {
                      "num": 1,
                      "suit": "s",
                    },
                    Object {
                      "num": 13,
                      "suit": "h",
                    },
                    Object {
                      "num": 3,
                      "suit": "d",
                    },
                    Object {
                      "num": 13,
                      "suit": "d",
                    },
                    null,
                    null,
                    Object {
                      "num": 11,
                      "suit": "h",
                    },
                    Object {
                      "num": 8,
                      "suit": "s",
                    },
                    Object {
                      "num": 10,
                      "suit": "h",
                    },
                    Object {
                      "num": 12,
                      "suit": "d",
                    },
                    Object {
                      "num": 8,
                      "suit": "d",
                    },
                    Object {
                      "num": 10,
                      "suit": "d",
                    },
                    Object {
                      "num": 12,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "h",
                    },
                    Object {
                      "num": 9,
                      "suit": "s",
                    },
                    Object {
                      "num": 1,
                      "suit": "c",
                    },
                  ],
                  "step": 7,
                },
              },
              Object {
                "_name": "PlayerOverrides24",
                "children": Array [],
                "name": "PlayerOverrides24",
                "ownOuts": Object {
                  "leftGate": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player20",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMagnaSaveStatus": Array [
                "Green",
              ],
              "lPopperStatus": Array [
                "Green",
              ],
              "lPower1": Array [
                "Orange",
              ],
              "lPower2": Array [],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "lShooterStartHand": Array [
                Array [
                  "Green",
                  "fl",
                ],
              ],
              "leftMagnet": false,
              "rampUp": true,
              "shooterDiverter": true,
            },
            "state": Object {
              "chips": 1,
              "closeShooter": false,
              "focus": "Poker33",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "rampUp": true,
              "score": 58000,
            },
          },
        ],
        "name": "Game19",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
        },
      },
      Object {
        "_name": "MachineOverrides17",
        "children": Array [
          Object {
            "_name": "EosPulse18",
            "children": Array [],
            "name": "EosPulse18",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides17",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine10",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSS7": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnaSaveStatus": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": true,
        "column": 3,
        "lastChange": 30053,
        "lastClosed": 30053,
        "lastOpened": undefined,
        "minOffTime": 150,
        "minOnTime": 10,
        "name": "right 3",
        "row": 2,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;

exports[`straight mb second short plunge does trigger skillsot 1`] = `
Object {
  "outputs": Object {
    "centerBank": false,
    "getSkillshot": [Function],
    "iCenter1": "redArrow",
    "iCenter2": "redArrow",
    "iCenter3": "redArrow",
    "iLeft1": "",
    "iLeft2": "",
    "iLeft3": "",
    "iLeft4": "",
    "iMini1": "",
    "iMini2": "",
    "iMini3": "",
    "iRight1": "",
    "iRight2": "",
    "iRight3": "",
    "iRight4": "",
    "iRight5": "",
    "iSS1": "",
    "iSS2": "",
    "iSS3": "",
    "iSS4": "",
    "iSS5": "",
    "iSS6": "",
    "iSS7": "",
    "iSpinner": "",
    "iUpper21": "",
    "iUpper22": "",
    "iUpper31": "",
    "iUpper32": "",
    "iUpper33": "",
    "ignoreSkillsot": Set {},
    "kickerEnable": true,
    "lEjectArrow": Array [],
    "lEjectShowCards": Array [],
    "lEjectStartMode": Array [],
    "lLaneUpper1": Array [
      "Orange",
    ],
    "lLaneUpper2": Array [
      "Orange",
    ],
    "lLaneUpper3": Array [
      "Orange",
    ],
    "lLaneUpper4": Array [
      "Orange",
    ],
    "lLeftArrow": Array [],
    "lLowerRamp": Array [],
    "lMagnaSaveStatus": Array [
      "Red",
    ],
    "lMainTargetArrow": Array [],
    "lMiniReady": Array [],
    "lPopperStatus": Array [
      "Red",
    ],
    "lPower1": Array [],
    "lPower2": Array [],
    "lPower3": Array [],
    "lPower4": Array [],
    "lRampArrow": Array [],
    "lRampShowCards": Array [],
    "lRampStartMb": Array [],
    "lShooterLaneArrow": Array [],
    "lShooterShowCards": Array [],
    "lShooterStartHand": Array [],
    "lSideShotArrow": Array [],
    "lSideTargetArrow": Array [],
    "lSpinnerArrow": Array [],
    "lUpperLaneArrow": Array [],
    "lUpperTargetArrow": Array [],
    "leftBank": false,
    "leftGate": false,
    "leftMagnet": false,
    "lockPost": false,
    "magnetPost": false,
    "miniBank": false,
    "miniDiverter": false,
    "miniEject": false,
    "miniFlipperEnable": false,
    "outhole": false,
    "popper": false,
    "rampUp": true,
    "realRightBank": false,
    "right1": false,
    "right2": false,
    "right3": false,
    "right4": false,
    "right5": false,
    "rightBank": false,
    "rightGate": true,
    "shooterDiverter": false,
    "troughRelease": false,
    "upper2": false,
    "upper3": false,
    "upperEject": false,
    "upperMagnet": false,
  },
  "state": Object {
    "_name": "Machine85",
    "children": Array [
      Object {
        "_name": "DropBank86",
        "children": Array [],
        "name": "DropBank86",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank87",
        "children": Array [],
        "name": "DropBank87",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank88",
        "children": Array [],
        "name": "DropBank88",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank89",
        "children": Array [],
        "name": "DropBank89",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank90",
        "children": Array [],
        "name": "DropBank90",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "DropBank91",
        "children": Array [],
        "name": "DropBank91",
        "ownOuts": undefined,
        "state": Object {},
      },
      Object {
        "_name": "Game94",
        "children": Array [
          Object {
            "_name": "Player95",
            "children": Array [
              Object {
                "_name": "ClearHoles96",
                "children": Array [],
                "name": "ClearHoles96",
                "ownOuts": Object {
                  "miniEject": false,
                  "outhole": false,
                  "upperEject": false,
                },
                "state": Object {},
              },
              Object {
                "_name": "Ball100",
                "children": Array [
                  Object {
                    "_name": "ResetAnyDropOnComplete101",
                    "children": Array [
                      Object {
                        "_name": "DropBankResetter102",
                        "children": Array [],
                        "name": "DropBankResetter102",
                        "ownOuts": Object {
                          "upper3": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter103",
                        "children": Array [],
                        "name": "DropBankResetter103",
                        "ownOuts": Object {
                          "upper2": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter104",
                        "children": Array [],
                        "name": "DropBankResetter104",
                        "ownOuts": Object {
                          "centerBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter105",
                        "children": Array [],
                        "name": "DropBankResetter105",
                        "ownOuts": Object {
                          "miniBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter106",
                        "children": Array [],
                        "name": "DropBankResetter106",
                        "ownOuts": Object {
                          "leftBank": false,
                        },
                        "state": Object {},
                      },
                      Object {
                        "_name": "DropBankResetter107",
                        "children": Array [],
                        "name": "DropBankResetter107",
                        "ownOuts": Object {
                          "rightBank": false,
                        },
                        "state": Object {},
                      },
                    ],
                    "name": "ResetAnyDropOnComplete101",
                    "ownOuts": undefined,
                    "state": Object {},
                  },
                ],
                "name": "Ball100",
                "ownOuts": Object {
                  "lMiniReady": Array [
                    "Red",
                  ],
                },
                "state": Object {
                  "miniReady": false,
                },
              },
              Object {
                "_name": "Spinner97",
                "children": Array [],
                "name": "Spinner97",
                "ownOuts": Object {
                  "iSpinner": undefined,
                  "leftGate": false,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 0,
                  "score": 800,
                },
              },
              Object {
                "_name": "LeftOrbit98",
                "children": Array [],
                "name": "LeftOrbit98",
                "ownOuts": Object {
                  "rightGate": true,
                },
                "state": Object {
                  "comboMult": 1,
                  "rounds": 1,
                  "score": 20000,
                },
              },
              Object {
                "_name": "StraightMb113",
                "children": Array [],
                "name": "StraightMb113",
                "ownOuts": Object {
                  "getSkillshot": [Function],
                  "iCenter1": "redArrow",
                  "iCenter2": "redArrow",
                  "iCenter3": "redArrow",
                  "iLeft1": undefined,
                  "iLeft2": undefined,
                  "iLeft3": undefined,
                  "iLeft4": undefined,
                  "iMini1": undefined,
                  "iMini2": undefined,
                  "iMini3": undefined,
                  "iRight1": undefined,
                  "iRight2": undefined,
                  "iRight3": undefined,
                  "iRight4": undefined,
                  "iRight5": undefined,
                  "iUpper21": undefined,
                  "iUpper22": undefined,
                  "iUpper31": undefined,
                  "iUpper32": undefined,
                  "iUpper33": undefined,
                  "ignoreSkillsot": undefined,
                  "lMiniReady": Array [],
                  "lRampArrow": Array [],
                  "lockPost": false,
                  "miniDiverter": false,
                  "rampUp": true,
                  "shooterDiverter": false,
                },
                "state": Object {
                  "lockPost": undefined,
                  "state": Object {
                    "_": "bankLit",
                    "bankLit": true,
                    "curBank": DropBank {
                      "coil": IncreaseSolenoid {
                        "actual": false,
                        "board": Solenoid16 {
                          "board": 0,
                        },
                        "changeAttempts": 0,
                        "debounce": 5,
                        "fake": [Function],
                        "i": 0,
                        "id": 428,
                        "initial": 50,
                        "lastActualChange": undefined,
                        "max": 100,
                        "ms": 50,
                        "name": "centerBank",
                        "num": 8,
                        "pending": false,
                        "resetPeriod": 2000,
                        "steps": 3,
                        "val": false,
                        "wait": 1000,
                      },
                      "ended": false,
                      "gPriority": undefined,
                      "lastChildren": Array [],
                      "listeners": Array [
                        Object {
                          "callback": "onAllDown",
                          "num": 1189,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onEnd",
                          "num": 1190,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onEnding",
                          "num": 1191,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": "onTargetDown",
                          "num": 1192,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": [Function],
                          "num": 1193,
                          "predicates": Array [
                            [Function],
                            [Function],
                          ],
                          "source": "",
                        },
                        Object {
                          "callback": [Function],
                          "num": 1194,
                          "predicates": Array [
                            [Function],
                          ],
                          "source": "",
                        },
                      ],
                      "num": 88,
                      "onEnding": [Function],
                      "switches": Array [
                        Switch {
                          "_state": false,
                          "column": 3,
                          "lastChange": 0,
                          "lastClosed": undefined,
                          "lastOpened": undefined,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center left",
                          "row": 4,
                        },
                        Switch {
                          "_state": false,
                          "column": 2,
                          "lastChange": 44162,
                          "lastClosed": 29556,
                          "lastOpened": 44162,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center center",
                          "row": 4,
                        },
                        Switch {
                          "_state": false,
                          "column": 1,
                          "lastChange": 44164,
                          "lastClosed": 28122,
                          "lastOpened": 44164,
                          "minOffTime": 150,
                          "minOnTime": 10,
                          "name": "center right",
                          "row": 4,
                        },
                      ],
                      "targets": Array [
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 3,
                            "debounce": 5,
                            "id": 490,
                            "lastActualChange": 42605,
                            "lastPendingChange": 42600,
                            "lastValChange": 42605,
                            "name": "iCenter1",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 0,
                          "state": false,
                          "switch": Switch {
                            "_state": false,
                            "column": 3,
                            "lastChange": 0,
                            "lastClosed": undefined,
                            "lastOpened": undefined,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center left",
                            "row": 4,
                          },
                        },
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 4,
                            "debounce": 5,
                            "id": 491,
                            "lastActualChange": 42605,
                            "lastPendingChange": 42600,
                            "lastValChange": 42605,
                            "name": "iCenter2",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 1,
                          "state": true,
                          "switch": Switch {
                            "_state": false,
                            "column": 2,
                            "lastChange": 44162,
                            "lastClosed": 29556,
                            "lastOpened": 44162,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center center",
                            "row": 4,
                          },
                        },
                        Object {
                          "bank": [Circular],
                          "image": Image {
                            "actual": "redArrow",
                            "changeAttempts": 4,
                            "debounce": 5,
                            "id": 492,
                            "lastActualChange": 42605,
                            "lastPendingChange": 42600,
                            "lastValChange": 42605,
                            "name": "iCenter3",
                            "pending": "redArrow",
                            "val": "redArrow",
                          },
                          "num": 2,
                          "state": true,
                          "switch": Switch {
                            "_state": false,
                            "column": 1,
                            "lastChange": 44164,
                            "lastClosed": 28122,
                            "lastOpened": 44164,
                            "minOffTime": 150,
                            "minOnTime": 10,
                            "name": "center right",
                            "row": 4,
                          },
                        },
                      ],
                      "tempNodes": Array [],
                    },
                  },
                },
              },
              Object {
                "_name": "PlayerOverrides99",
                "children": Array [],
                "name": "PlayerOverrides99",
                "ownOuts": Object {
                  "leftGate": undefined,
                  "rightGate": undefined,
                  "shooterDiverter": undefined,
                },
                "state": Object {},
              },
            ],
            "name": "Player95",
            "ownOuts": Object {
              "lEjectStartMode": Array [],
              "lLaneUpper1": Array [
                "Orange",
              ],
              "lLaneUpper2": Array [
                "Orange",
              ],
              "lLaneUpper3": Array [
                "Orange",
              ],
              "lLaneUpper4": Array [
                "Orange",
              ],
              "lMagnaSaveStatus": Array [
                "Red",
              ],
              "lPopperStatus": Array [
                "Red",
              ],
              "lPower1": Array [],
              "lPower2": Array [],
              "lPower3": Array [],
              "lPower4": Array [],
              "lRampStartMb": Array [],
              "lShooterStartHand": Array [],
              "leftMagnet": false,
              "rampUp": false,
              "shooterDiverter": undefined,
            },
            "state": Object {
              "chips": 0,
              "closeShooter": false,
              "focus": "StraightMb113",
              "laneChips": Array [
                true,
                true,
                true,
                true,
              ],
              "mbsQualified": Array [],
              "modesQualified": Array [],
              "rampUp": false,
              "score": 70040,
            },
          },
        ],
        "name": "Game94",
        "ownOuts": Object {
          "kickerEnable": true,
        },
        "state": Object {
          "ballNum": 1,
        },
      },
      Object {
        "_name": "MachineOverrides92",
        "children": Array [
          Object {
            "_name": "EosPulse93",
            "children": Array [],
            "name": "EosPulse93",
            "ownOuts": undefined,
            "state": Object {},
          },
        ],
        "name": "MachineOverrides92",
        "ownOuts": Object {
          "rampUp": undefined,
          "realRightBank": false,
          "shooterDiverter": undefined,
        },
        "state": Object {},
      },
    ],
    "name": "Machine85",
    "ownOuts": Object {
      "centerBank": false,
      "getSkillshot": undefined,
      "iCenter1": "",
      "iCenter2": "",
      "iCenter3": "",
      "iLeft1": "",
      "iLeft2": "",
      "iLeft3": "",
      "iLeft4": "",
      "iMini1": "",
      "iMini2": "",
      "iMini3": "",
      "iRight1": "",
      "iRight2": "",
      "iRight3": "",
      "iRight4": "",
      "iRight5": "",
      "iSS1": "",
      "iSS2": "",
      "iSS3": "",
      "iSS4": "",
      "iSS5": "",
      "iSS6": "",
      "iSS7": "",
      "iSpinner": "",
      "iUpper21": "",
      "iUpper22": "",
      "iUpper31": "",
      "iUpper32": "",
      "iUpper33": "",
      "ignoreSkillsot": Set {},
      "kickerEnable": false,
      "lEjectArrow": Array [],
      "lEjectShowCards": Array [],
      "lEjectStartMode": Array [],
      "lLaneUpper1": Array [],
      "lLaneUpper2": Array [],
      "lLaneUpper3": Array [],
      "lLaneUpper4": Array [],
      "lLeftArrow": Array [],
      "lLowerRamp": Array [],
      "lMagnaSaveStatus": Array [],
      "lMainTargetArrow": Array [],
      "lMiniReady": Array [
        "Red",
      ],
      "lPopperStatus": Array [],
      "lPower1": Array [],
      "lPower2": Array [],
      "lPower3": Array [],
      "lPower4": Array [],
      "lRampArrow": Array [],
      "lRampShowCards": Array [],
      "lRampStartMb": Array [],
      "lShooterLaneArrow": Array [],
      "lShooterShowCards": Array [],
      "lShooterStartHand": Array [],
      "lSideShotArrow": Array [],
      "lSideTargetArrow": Array [],
      "lSpinnerArrow": Array [],
      "lUpperLaneArrow": Array [],
      "lUpperTargetArrow": Array [],
      "leftBank": false,
      "leftGate": false,
      "leftMagnet": false,
      "lockPost": false,
      "magnetPost": false,
      "miniBank": false,
      "miniDiverter": false,
      "miniEject": false,
      "miniFlipperEnable": false,
      "outhole": false,
      "popper": false,
      "rampUp": false,
      "realRightBank": false,
      "right1": false,
      "right2": false,
      "right3": false,
      "right4": false,
      "right5": false,
      "rightBank": false,
      "rightGate": false,
      "shooterDiverter": false,
      "troughRelease": false,
      "upper2": false,
      "upper3": false,
      "upperEject": false,
      "upperMagnet": false,
    },
    "state": Object {
      "lastSwitchHit": Switch {
        "_state": false,
        "column": 5,
        "lastChange": 269313,
        "lastClosed": 211124,
        "lastOpened": 269313,
        "minOffTime": 10,
        "minOnTime": 1,
        "name": "right inlane",
        "row": 0,
      },
      "lockDown": false,
      "miniDown": false,
    },
  },
}
`;
